Upgrade from Java 8 to Java 17
Didn't work really well.... Had to change serialisation / reflective access workaround