@@ -1,6 +1,6 @@
 plugins {
-    // https://kotlinlang.org/releases.html#release-details
-    id 'org.jetbrains.kotlin.jvm' version '1.5.30' apply false
+    id 'org.jetbrains.kotlin.jvm' version "1.5.31"
+    id 'org.jetbrains.kotlin.plugin.serialization' version "1.5.31"
 }
 
 subprojects {
@@ -8,33 +8,40 @@ subprojects {
     version '1.0-SNAPSHOT'
 
     apply plugin: 'org.jetbrains.kotlin.jvm'
-    sourceCompatibility = 1.8
+    apply plugin: 'org.jetbrains.kotlin.plugin.serialization'
 
     compileKotlin {
-        kotlinOptions.jvmTarget = "1.8"
-        kotlinOptions.useIR = true
+        kotlinOptions {
+            jvmTarget = "16"
+            useIR = true
+        }
     }
+
     compileTestKotlin {
-        kotlinOptions.jvmTarget = "1.8"
-        kotlinOptions.useIR = true
+        kotlinOptions {
+            jvmTarget = "16"
+            useIR = true
+        }
     }
 
     repositories {
         mavenCentral()
     }
 
-    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
-        kotlinOptions {
-            jvmTarget = "1.8"
-        }
+    compileJava {
+        options.compilerArgs = Arrays.asList("--add-exports", "java.base/java.util=ALL-UNNAMED")
+        options.forkOptions.executable = "javac" // required for above?
     }
 
     dependencies {
         // https://kotlinlang.org/releases.html#release-details
         def kotlinx_html_version = '0.7.3'
+        def kotlin_version = '1.5.30'
         def kotlinx_coroutines_version = '1.5.1'
-        implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+        def kotlinx_serialization_version = '1.3.0'
+        implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
         implementation "org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:$kotlinx_coroutines_version"
         implementation "org.jetbrains.kotlinx:kotlinx-html-jvm:$kotlinx_html_version"
+        implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$kotlinx_serialization_version"
     }
 }
